# context-compression-engine

./: .gitignore  main.py  phses.md  pyproject.toml
.cce_data/: sessions.json  warm.db  warm.db-shm  warm.db-wal
.cce_data/cold/: demo-session.json  gemma-demo-session.json  index.json  mcp-live-demo.json  mcp-visual-demo.json  ui-session.json
cce_core/: config.py  engine.py
cce_core/compression/: chunker.py  merger.py  summarizer.py
cce_core/ingestion/: segmenter.py  tokenizer.py
cce_core/memory/: cold_tier.py  hot_tier.py  store.py  warm_tier.py
cce_core/retrieval/: context_builder.py  retriever.py
cce_core/session/: manager.py  stateless.py
cce_mcp/: schema.py  server.py  server_http.py
cce_ui/: app.py  dashboard.html
examples/: gemma_local_demo.py  mcp_claude_demo.md  mcp_live_demo.py  showcase_demo.py  summarizer_showcase.html  summarizer_showcase.py  visual_demo.py
tests/: test_chunker.py  test_memory_store.py  test_retriever.py
