[project]
name = "context-compression-engine"
version = "0.1.0"
description = "A smart memory engine for AI that turns long conversations into clear, compact notes. It remembers what matters, forgets the noise, and gives any LLM the right context at the right time — making chats faster, cheaper, and more human-like."

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pydantic>=2.13.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
